@@ -7,22 +7,25 @@ import lombok.NoArgsConstructor;
 import org.infoshare.rekinyfinansjeryweb.controller.FiltrationController;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
 public class UsedCurrenciesService {
     public List<PossibleCurrency> getShortNamesOfCurrencies(NBPApiManager nbpApiManager, List<String> selectedCurrencies){
-        return nbpApiManager.getCollectionsOfExchangeRates()
-                .stream()
-                .findFirst()
-                .map(exchangeRates -> exchangeRates
+        Set<PossibleCurrency> currencySet = new HashSet<>();
+        nbpApiManager
+            .getCollectionsOfExchangeRates()
+            .forEach(dailyExchangeRates -> {
+                currencySet.addAll(
+                    dailyExchangeRates
                         .getRates()
                         .stream()
                         .map(rate -> new PossibleCurrency(rate.getCode(), selectedCurrencies.contains(rate.getCode())))
-                        .collect(Collectors.toList()))
-                .orElseGet(ArrayList::new);
+                        .collect(Collectors.toSet()));
+            });
+
+        return currencySet.stream().toList();
     }
 
     @Data
@@ -31,5 +34,18 @@ public class UsedCurrenciesService {
     public class PossibleCurrency{
         private String code;
         private boolean checked;
+
+        @Override
+        public boolean equals(Object o) {
+            if (this == o) return true;
+            if (o == null || getClass() != o.getClass()) return false;
+            PossibleCurrency that = (PossibleCurrency) o;
+            return checked == that.checked && Objects.equals(code, that.code);
+        }
+
+        @Override
+        public int hashCode() {
+            return Objects.hash(code, checked);
+        }
     }
 }
